--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     git status
     git add .
     git add
+    git commit -m
+    git config --global user.name "damsazali73@gmail.com"
+    config --global user.email "damsazali73@gmail.com"
     -->
 </body>
 </html>
