--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     git status
     git add .
     git add
-    git commit -m
+    git commit -m addfiles
     git config --global user.name "damsazali73@gmail.com"
     config --global user.email "damsazali73@gmail.com"
     -->
